--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="es-nasic" id="es-nasic">
         <div class="es-kv">
-            <img src="./img/logo-nasic-kids.png" alt="nasic" class="es-kv__logo">
+            <img src="./img/logo-nasic-kids.png" alt="nasic" class="es-kv__logo"/>
             <div class="es-kv__heroCtn">
-                <img src="./img/kv-hero.png" alt="" class="es-kv__hero">
+                <img src="./img/kv-hero.png" alt="" class="es-kv__hero"/>
             </div>
             <div class="es-kv__contentCtn">
-                <img src="./img/kv-text.png" alt="katara przegania i nos ochrania" class="es-kv__title">
+                <img src="./img/kv-text.png" alt="katara przegania i nos ochrania" class="es-kv__title"/>
                 <p class="es-kv__subtitle">
                     Do stosowania w objawowym leczeniu
                     niedrożności przewodów nosowych
@@ -24,10 +24,10 @@
                 </p>
             </div>
             <div class="es-kv__productCtn">
-                <img src="./img/nasic-monster.png" alt="" class="es-kv__monster">
+                <img src="./img/nasic-monster.png" alt="" class="es-kv__monster"/>
                 <div class="es-kv__nasicCtn">
-                    <img src="./img/nasic-kids.png" alt="" class="es-kv__nasic">
-                    <img src="./img/spray.png" alt="" class="es-kv__nasicSpray">
+                    <img src="./img/nasic-kids.png" alt="" class="es-kv__nasic"/>
+                    <img src="./img/spray.png" alt="" class="es-kv__nasicSpray"/>
                 </div>
                 
             </div>
@@ -39,7 +39,7 @@
                     <p class="es-how__text">nasic® kids</br> udrażnia nos</p>
                     <p class="es-how__desc">i zmniejsza obrzęk <br> oraz przekrwienie błony <br> śluzowej nosa. Przynosi ulgę <br> w oddychaniu.</p>
                 </div>
-                <img src="./img/plus.png" alt="" class="es-how__plus">
+                <img src="./img/plus.png" alt="" class="es-how__plus"/>
                 <div class="es-how__single es-how__single--teal">
                     <p class="es-how__text">nasic® kids</br> przyspiesza gojenie</p>
                     <p class="es-how__desc">i łagodzi podrażnienia. <br> Regeneruje błonę <br> śluzową nosa.</p>
@@ -49,7 +49,7 @@
         <div class="es-benefits">
             <div class="es-benefits__mainCtn">
                 <div class="es-benefits__imgCtn">
-                    <img src="./img/benefits-img.png" alt="wygodne opakowanie" class="es-benefits__img">
+                    <img src="./img/benefits-img.png" alt="wygodne opakowanie" class="es-benefits__img"/>
                 </div>
                 <div class="es-benefits__listCtn">
                     <ul class="es-benefits__list">
@@ -87,17 +87,17 @@
                     </ul>
                 </div>
             </div>
-            <img src="./img/bg-cloud.png" alt="" class="es-benefits__cloud">
+            <img src="./img/bg-cloud.png" alt="" class="es-benefits__cloud"/>
         </div>
         <div class="es-ingr">
             <div class="es-ingr__content">
-                <img src="./img/ingr-text.png" alt="szybsze zwycięstwo nad katarem" class="es-ingr__imgText">
+                <img src="./img/ingr-text.png" alt="szybsze zwycięstwo nad katarem" class="es-ingr__imgText"/>
                 <p class="es-ingr__desc">
                     Dzięki synergii dwóch substancji czynnych: <br> <span>ksylometazoliny i deksopantenolu</span>
                 </p>
             </div>
             <div class="es-ingr__imgCtn">
-                <img src="./img/uff.png" alt="szybka ulga" class="es-ingr__img">
+                <img src="./img/uff.png" alt="szybka ulga" class="es-ingr__img"/>
             </div>
         </div>
         <div class="es-cross">
@@ -124,7 +124,7 @@
 
                 <div class="es-cross__single">
                     <div class="es-cross__imgCtn">
-                        <img src="./img/nasic-kids-cross.png" alt="nasic kids" class="es-cross__img">
+                        <img src="./img/nasic-kids-cross.png" alt="nasic kids" class="es-cross__img"/>
                         <div class="es-cross__textCtn es-cross__textCtn--kids">
                             <p class="es-cross__text">od</p>
                             <p class="es-cross__text"><span>2</span></p>
@@ -141,9 +141,9 @@
                 </div>
             </div>
             <div class="es-cross__starsCtn">
-                <img src="./img/stars.png" alt="" class="es-cross__stars">
+                <img src="./img/stars.png" alt="" class="es-cross__stars"/>
             </div>
-            <img src="./img/bg-pink.png" alt="" class="es-cross__wave">
+            <img src="./img/bg-pink.png" alt="" class="es-cross__wave"/>
         </div>
 
         <div class="es-footer">
@@ -156,7 +156,7 @@
             <p class="es-footer__claim--big">
                 To jest lek. Dla bezpieczeństwa stosuj go zgodnie z&nbsp;ulotką dołączoną do opakowania i&nbsp;tylko wtedy, gdy jest to konieczne. W&nbsp;przypadku wątpliwości skonsultuj się z&nbsp;lekarzem lub farmaceutą.
             </p>
-            <img src="./img/nasic-logo-white.png" alt="nasic" class="es-footer__logo">
+            <img src="./img/nasic-logo-white.png" alt="nasic" class="es-footer__logo"/>
         </div>
     </div>
 </body>
